Stop latest images section in sitecontrol from overflowing

--- a/public/style.scss
+++ b/public/style.scss
@@ -157,7 +157,8 @@ body.noselect {
 			background: unset;
 			margin: auto;
 		}
-		.ContentItem[real_id="Image"] {
+		.ContentItem[real_id="Image"],
+		#Co_ContentEditor_Container .co_photo_gallery_body {
 			width: auto !important;
 		}
 		a:-webkit-any-link {
